test/type/wrong/higherrank3.kk.out
test/type/wrong/higherrank3.kk(4, 9): error: type is not polymorphic enough
 context : auto(f)
 term : f
 inferred type : ($a) -> $a
 is less general than: forall<b> (b) -> b
 hint : give a higher-rank type annotation to a function parameter?